--- a/src/main/resources/at/fhtw/swen2/presentation/view/NewTour.fxml
+++ b/src/main/resources/at/fhtw/swen2/presentation/view/NewTour.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 <?import javafx.geometry.Insets?>
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="200.0" prefWidth="200.0"
+<VBox maxHeight="-Infinity" maxWidth="300" minHeight="-Infinity" minWidth="200.0" prefWidth="200.0"
       spacing="8.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1"
       fx:controller="at.fhtw.swen2.presentation.view.TourView">
 
@@ -22,7 +22,7 @@
         <Separator prefWidth="200.0" />
         <Text text="Name"/>
         <TextField fx:id="nameTextField"/>
-        <Text text="Descriptiom"/>
+        <Text text="Description"/>
         <TextField fx:id="descriptionTextField"/>
         <Text text="From"/>
         <TextField fx:id="fromTextField"/>
