--- a/src/main/resources/at/fhtw/swen2/presentation/view/TourList.fxml
+++ b/src/main/resources/at/fhtw/swen2/presentation/view/TourList.fxml
@@ -14,12 +14,14 @@
     <children>
         <VBox>
             <children>
-                <Button fx:id="deleteButton" onAction="#deleteButtonAction" text="delete">Delete</Button>
-            </children>
-            <children>
-            <TableView fx:id="tableView" prefHeight="200.0" prefWidth="200.0">
+            <TableView fx:id="tableView" prefHeight="350.0" prefWidth="1000.0">
                 <columns>
                     <TableColumn fx:id="nameColumn" prefWidth="75.0" text="Name" />
+                    <TableColumn fx:id="fromColumn" prefWidth="75.0" text="From" />
+                    <TableColumn fx:id="toColumn" prefWidth="75.0" text="To" />
+                    <TableColumn fx:id="transportTypeColumn" prefWidth="75.0" text="Transport Type" />
+                    <TableColumn fx:id="distanceColumn" prefWidth="75.0" text="Distance" />
+                    <TableColumn fx:id="timeColumn" prefWidth="75.0" text="Time" />
                 </columns>
             </TableView>
             </children>
