--- a/src/main/resources/at/fhtw/swen2/presentation/view/EditTourList.fxml
+++ b/src/main/resources/at/fhtw/swen2/presentation/view/EditTourList.fxml
@@ -3,21 +3,22 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="1000.0" prefWidth="600.0"
+<?import javafx.scene.text.Text?>
+<AnchorPane styleClass="anchor-pane-main"
             xmlns="http://javafx.com/javafx/11.0.14-internal"
             xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="at.fhtw.swen2.presentation.view.EditTourListView">
+            fx:controller="at.fhtw.swen2.presentation.view.EditTourListView" stylesheets="@EditTourList.css">
     <children>
         <HBox>
             <children>
-                <TableView fx:id="tableView" prefHeight="350.0" prefWidth="700.0">
+                <TableView fx:id="tableView" styleClass="table-view">
                     <columns>
-                        <TableColumn fx:id="nameColumn" prefWidth="75.0" text="Name" />
-                        <TableColumn fx:id="fromColumn" prefWidth="75.0" text="From" />
-                        <TableColumn fx:id="toColumn" prefWidth="75.0" text="To" />
-                        <TableColumn fx:id="transportTypeColumn" prefWidth="75.0" text="Transport Type" />
-                        <TableColumn fx:id="distanceColumn" prefWidth="75.0" text="Distance" />
-                        <TableColumn fx:id="timeColumn" prefWidth="75.0" text="Time" />
+                        <TableColumn fx:id="nameColumn" text="Name" />
+                        <TableColumn fx:id="fromColumn" text="From" />
+                        <TableColumn fx:id="toColumn" text="To" />
+                        <TableColumn fx:id="transportTypeColumn" text="Transport Type" />
+                        <TableColumn fx:id="distanceColumn" text="Distance" />
+                        <TableColumn fx:id="timeColumn" text="Time" />
                     </columns>
                 </TableView>
             </children>
@@ -31,20 +32,22 @@
                 <TextField fx:id="fromEditTextField" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                 <Label text="To:" GridPane.columnIndex="0" GridPane.rowIndex="3" />
                 <TextField fx:id="toEditTextField" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-                <Label text="Distance:" GridPane.columnIndex="0" GridPane.rowIndex="0" />
-                <TextField fx:id="distanceEditTextField" />
-                <Label text="Time:" GridPane.columnIndex="0" GridPane.rowIndex="0" />
-                <TextField fx:id="timeEditTextField" />
+                <Text text="Transport"/>
+                <ChoiceBox fx:id="transportTypeChoiceBox"/>
+<!--                <Label text="Distance:" GridPane.columnIndex="0" GridPane.rowIndex="0" />-->
+<!--                <TextField fx:id="distanceEditTextField" />-->
+<!--                <Label text="Time:" GridPane.columnIndex="0" GridPane.rowIndex="0" />-->
+<!--                <TextField fx:id="timeEditTextField" />-->
             </children>
 
-            <HBox>
-            <children>
-                <Button fx:id="saveEditButton" onAction="#saveEditButtonAction" text="Edit Tour"></Button>
-            </children>
-            <children>
-                <Button fx:id="editEditButton" onAction="#editEditButtonAction" text="Save New Tour"></Button>
-            </children>
-            </HBox>
+                <VBox styleClass="vbox">
+                    <Text fx:id="feedbackText" styleClass="feedback-text"/>
+
+                    <Button fx:id="deleteTourButton" onAction="#deleteButtonAction" text="Delete Tour"
+                            styleClass="button"/>
+                    <Button fx:id="saveEditButton" onAction="#saveEditButtonAction" text="Edit Tour"
+                            styleClass="button"/>
+                </VBox>
             </VBox>
 
         </HBox>
