--- a/src/main/resources/at/fhtw/swen2/presentation/view/TourList.fxml
+++ b/src/main/resources/at/fhtw/swen2/presentation/view/TourList.fxml
@@ -10,18 +10,21 @@
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
             fx:controller="at.fhtw.swen2.presentation.view.TourListView"
-            prefHeight="400.0" prefWidth="600.0">
+            stylesheets="@TourList.css"
+            >
     <children>
         <VBox>
             <children>
-            <TableView fx:id="tableView" prefHeight="350.0" prefWidth="1000.0">
+            <TableView fx:id="tableView">
                 <columns>
-                    <TableColumn fx:id="nameColumn" prefWidth="75.0" text="Name" />
-                    <TableColumn fx:id="fromColumn" prefWidth="75.0" text="From" />
-                    <TableColumn fx:id="toColumn" prefWidth="75.0" text="To" />
-                    <TableColumn fx:id="transportTypeColumn" prefWidth="75.0" text="Transport Type" />
-                    <TableColumn fx:id="distanceColumn" prefWidth="75.0" text="Distance" />
-                    <TableColumn fx:id="timeColumn" prefWidth="75.0" text="Time" />
+                    <TableColumn fx:id="nameColumn" text="Name" />
+                    <TableColumn fx:id="fromColumn" text="From" />
+                    <TableColumn fx:id="toColumn" text="To" />
+                    <TableColumn fx:id="transportTypeColumn" text="Transport Type" />
+                    <TableColumn fx:id="distanceColumn" text="Distance" />
+                    <TableColumn fx:id="timeColumn" text="Time" />
+                    <TableColumn fx:id="popularityColumn" text="Popularity" />
+                    <TableColumn fx:id="childFriendlyColumn" text="Child Friendly" />
                 </columns>
             </TableView>
             </children>
